--- a/src/Components/ProfileData/profileData.scss
+++ b/src/Components/ProfileData/profileData.scss
@@ -99,4 +99,10 @@
             }
         }
     }
+    .newPassword_inp{
+        position: relative;
+        top: 8px;
+        border: none;
+        outline: none;
+    }
 }
