--- a/src/Components/Advertisement/advertisement.scss
+++ b/src/Components/Advertisement/advertisement.scss
@@ -50,21 +50,29 @@
             .toCatalogButton {
                 border: none;
                 border-radius: 7px;
+
                 margin-left: 20px;
                 width: 210px;
                 height: 50px;
+
                 background-color: #f05a00;
-                text-align: center;
+
+                display: grid;
+                place-items: center;
+
                 font-family: Raleway;
                 font-size: 14px;
                 font-weight: 600;
                 line-height: 16px;
                 color: white;
+
                 text-transform: uppercase;
+                text-decoration: none;
             }
 
             .toCatalogButton:hover {
                 cursor: pointer;
+                background: rgba(33, 37, 38, 1);
             }
 
         }
