--- a/src/Components/Catalog/catalog.scss
+++ b/src/Components/Catalog/catalog.scss
@@ -1,47 +1,30 @@
 .catalog {
     padding-top: 50px;
-    padding-bottom: 50px;
+    padding-bottom: 200px;
+    background: #dedbdb;
     display: grid;
     place-items: center;
-    background: #F2F5F7;
 
     .catalog-container {
-        width: 81%;
         display: flex;
-        justify-content: space-evenly;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+        gap: 150px;
+        width: 80%;
+        margin: 0 auto;
 
-        .catalog-content1 {
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-
+        .product_box {
+            width: 310px;
+            height: 340px;
         }
 
-        .productBox {
-            .sliderButtons {
-                display: flex;
-                align-items: center;
-
-                .sliderButton {
-                    width: 40px;
-                    height: 40px;
-                    border-radius: 50%;
-                    background: white;
-                    display: grid;
-                    place-items: center;
-                    border: none;
-                    outline: none;
-                    cursor: pointer;
-                }
-            }
-
-            .titleBox {
-                display: flex;
-                justify-content: space-between;
-                .title{
-                    width: 250px;
-                }
-            }
+        .categoryName {
+            font-family: Prosto One;
+            font-size: 20px;
+            font-weight: 400;
+            line-height: 22px;
+            text-align: center;
         }
     }
 }
