--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -31,6 +31,10 @@
                 line-height: 20px;
                 color: rgba(255, 255, 255, 1);
             }
+            .footerLink_box1:hover{
+                color: orange;
+                text-decoration: underline;
+            }
         }
 
         .footer-box2 {
@@ -46,6 +50,10 @@
                 font-weight: 400;
                 line-height: 20px;
                 color: rgba(255, 255, 255, 1);
+            }
+            .footerLink_box2:hover{
+                color: orange;
+                text-decoration: underline;
             }
         }
 
