--- a/src/Components/Card/card.scss
+++ b/src/Components/Card/card.scss
@@ -1,9 +1,8 @@
 .card {
-    margin-top: 15px;
-    margin-bottom: 15px;
     width: 310px;
-    height: 360px;
-    background: white;
+    height: 380px;
+    text-decoration: none;
+    background-color: white;
     border-radius: 8px;
 
     .card-container {
@@ -42,7 +41,6 @@
                     width: 212px;
                     height: 184px;
                 }
-
             }
 
             .cardTerminal2 {
@@ -86,31 +84,31 @@
         border: none;
         outline: none;
     }
+    .new_box {
+        background: #180A3E;
+    
+        width: 70px;
+        height: 24px;
+        padding: 5px;
+    
+        font-family: Raleway;
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 16px;
+        color: white;
+    }
+    
+    .weHave_box {
+        display: flex;
+        justify-content: space-between;
+        width: 90px;
+    
+        font-family: Raleway;
+        font-size: 14px;
+        font-weight: 500;
+        line-height: 16px;
+        color: rgba(18, 105, 53, 1);
+    
+    }
 }
 
-.new_box {
-    background: #180A3E;
-
-    width: 70px;
-    height: 24px;
-    padding: 5px;
-
-    font-family: Raleway;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 16px;
-    color: white;
-}
-
-.weHave_box {
-    display: flex;
-    justify-content: space-between;
-    width: 90px;
-
-    font-family: Raleway;
-    font-size: 14px;
-    font-weight: 500;
-    line-height: 16px;
-    color: rgba(18, 105, 53, 1);
-
-}
