--- a/src/Components/Advertisement/advertisement.scss
+++ b/src/Components/Advertisement/advertisement.scss
@@ -157,3 +157,11 @@
         }
     }
 }
+
+@media (max-width: 1280px) {
+    .advertisement{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+}
