--- a/src/Components/Authorization/authorization.scss
+++ b/src/Components/Authorization/authorization.scss
@@ -2,9 +2,12 @@
   position: fixed;
   width: 100%;
   height: 100%;
+  top: 0;
+  left: 0;
   background: #000000cc;
   display: grid;
   place-items: center;
+  z-index: 10000;
 
   .authorization-container {
     padding: 15px;
