--- a/src/Components/Card/card.scss
+++ b/src/Components/Card/card.scss
@@ -1,6 +1,7 @@
-.card {
+.cardBox {
+    margin-top: 15px;
     width: 310px;
-    height: 380px;
+    height: 360px;
     text-decoration: none;
     background-color: white;
     border-radius: 8px;
@@ -27,10 +28,13 @@
 
         .cardContent {
             .cardInfo {
+                height: 60px;
                 font-family: Raleway;
                 font-size: 16px;
                 font-weight: 500;
                 line-height: 20px;
+                color: black;
+                text-decoration: none;
             }
 
             .cardImage {
@@ -43,7 +47,19 @@
                 }
             }
 
+        }
+
+        .cardInfo {
+            padding-top: 25px;
+        }
+
+        .cardCart {
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+
             .cardTerminal2 {
+                width: 80%;
                 margin-top: 15px;
                 display: flex;
                 justify-content: space-between;
@@ -58,12 +74,28 @@
                     .cardStatus {
                         display: flex;
                         justify-content: space-around;
-                        width: 50%;
+                        width: 60%;
+                        align-items: center;
+                    }
+
+                    .weHave_box {
+                        display: flex;
+                        justify-content: space-between;
+                        align-items: center;
+                        font-family: Raleway;
+                        font-size: 14px;
+                        font-weight: 500;
+                        line-height: 16px;
+                        color: rgba(18, 105, 53, 1);
+
+                        .weHave_text {
+                            width: 75px;
+                        }
                     }
                 }
 
                 .cardPrice {
-                    width: 40%;
+                    width: 70%;
                     font-family: Raleway;
                     font-size: 20px;
                     font-weight: 600;
@@ -73,10 +105,6 @@
 
             }
         }
-
-        .cardInfo {
-            padding-top: 25px;
-        }
     }
 
     .basket_btn {
@@ -84,31 +112,20 @@
         border: none;
         outline: none;
     }
+
     .new_box {
         background: #180A3E;
-    
+
         width: 70px;
         height: 24px;
         padding: 5px;
-    
+
         font-family: Raleway;
         font-size: 14px;
         font-weight: 400;
         line-height: 16px;
         color: white;
     }
-    
-    .weHave_box {
-        display: flex;
-        justify-content: space-between;
-        width: 90px;
-    
-        font-family: Raleway;
-        font-size: 14px;
-        font-weight: 500;
-        line-height: 16px;
-        color: rgba(18, 105, 53, 1);
-    
-    }
-}
 
+
+}
