--- a/src/Components/News/news.scss
+++ b/src/Components/News/news.scss
@@ -86,3 +86,46 @@
 
     }
 }
+
+@media (max-width: 1280px) {
+    .news{
+        .news-container{
+            display: flex;
+            flex-direction: column;
+            .infoNews{
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                .infoNewsText{
+                    text-align: center;
+                }
+            }
+            .contentNews{
+                width: 100%;
+
+                .contentNews-container{
+                    padding-top: 25px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    gap: 60px;
+                    .cardNewsLink{
+                       .cardNews{
+                        .titleOfNews{
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+                        }
+                        .dateOfNews{
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+                        }
+                       }
+                    }
+                }
+            }
+        }
+    }
+}
