--- a/src/Pages/Catalog/catalog.scss
+++ b/src/Pages/Catalog/catalog.scss
@@ -56,7 +56,20 @@
                 display: flex;
                 
                 flex-wrap: wrap;
-                gap: 50px;
+                gap: 20px;
+            }
+        }
+    }
+}
+
+
+@media (max-width:1024px) {
+    .catalog_page-container {
+        .catalogProducts {
+            .products{
+                display: flex;
+                align-items: center;
+                justify-content: center;
             }
         }
     }
