--- a/src/Pages/Contacts/contacts.scss
+++ b/src/Pages/Contacts/contacts.scss
@@ -25,9 +25,14 @@
         }
 
         .contancts_content1 {
-            width: 40%;
+            height: 600px;
+            width: 50%;
             display: grid;
             place-items: center;
+            background-image: url(../../img/map.png);
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
         }
 
         .contacts_content2 {
