--- a/src/Components/AboutUs/AboutUs.scss
+++ b/src/Components/AboutUs/AboutUs.scss
@@ -6,16 +6,26 @@
     margin-bottom: 50px;
 
     .aboutUs-container {
-        height: 480px;
+        height: 100%;
         width: 82%;
         margin: 0 auto;
         display: flex;
         justify-content: space-between;
         align-items: center;
+
+        @media (max-width: 1024px) {
+            flex-direction: column;
+        }
     }
 
     .content {
         width: 40%;
+
+        @media (max-width: 1024px) {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
     }
 
     .info {
@@ -25,13 +35,35 @@
         top: 0;
         left: 0;
 
+        @media (max-width: 1024px) {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
         .titleAbout {
+            margin-top: 15px;
+            margin-bottom: 15px;
             //styleName: H2;
             font-family: Prosto One;
             font-size: 30px;
             font-weight: 400;
             line-height: 32px;
             color: black;
+
+            @media (max-width: 1024px) {
+                text-align: center;
+            }
+        }
+
+        .infoText_content {
+            @media (max-width: 1024px) {
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+            }
         }
 
         .infoText1,
@@ -41,6 +73,10 @@
             font-weight: 400;
             line-height: 24px;
             margin-top: 35px;
+
+            @media (max-width: 1024px) {
+                text-align: center;
+              }
         }
 
         .toCatalogButton {
@@ -58,6 +94,7 @@
             color: white;
             text-transform: uppercase;
             cursor: pointer;
+
         }
 
         .toCatalogButton:hover {
