--- a/src/Components/BasketProduct/basketProduct.scss
+++ b/src/Components/BasketProduct/basketProduct.scss
@@ -11,6 +11,7 @@
         padding: 10px;
         display: flex;
         justify-content: space-between;
+        align-items: center;
 
         .product-logo img {
             width: 60px;
@@ -21,8 +22,8 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
+            align-items: center;
             width: 290px;
-            text-align: start;
 
             .category-title {
                 font-family: Raleway;
@@ -38,6 +39,12 @@
                 font-weight: 500;
                 line-height: 20px;
                 color: black;
+            }
+            @media (max-width:1366px) {
+               width: 360px;
+            }
+            @media (max-width: 1024px) {
+                width: 220px;
             }
         }
 
@@ -55,6 +62,12 @@
                 font-weight: 500;
                 line-height: 20px;
                 color: black;
+            }
+            @media (max-width: 1366px) {
+                width: 100px;
+            }
+            @media (max-width: 1024px) {
+                width: 100px;
             }
         }
 
@@ -83,10 +96,16 @@
                     outline: none;
                     cursor: pointer;
 
+                    @media (max-width: 1024px) {
+                        width: 20px;
+                        height: 20px;
+                    }
                 }
             }
 
-
+            @media (max-width: 1024px) {
+                width: 107px;
+            }
         }
 
         .totalPrice_content {
@@ -117,6 +136,24 @@
                 border: none;
                 cursor: pointer;
             }
+
+            @media (max-width: 1024px) {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                height: 100%;
+                width: 15px;
+
+
+                .deleteProduct_btn {
+                    width: 15px;
+                    height: 15px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                }
+
+            }
         }
     }
 }
@@ -137,15 +174,17 @@
 
     .count {
         width: 200px;
+
         .count-container {
-            .countProduct_btn{
+            .countProduct_btn {
                 width: 15px;
                 height: 15px;
 
             }
         }
     }
-    .cart_total_price_container{
+
+    .cart_total_price_container {
         width: 50%;
     }
 }
