--- a/src/Components/CardInfo/cardInfo.scss
+++ b/src/Components/CardInfo/cardInfo.scss
@@ -47,6 +47,14 @@
                         box-shadow: 0px 5px 20px 0px rgba(240, 90, 0, 0.2);
                         border-radius: 10px;
                     }
+                    @media (max-width:1024px) {
+                        .secondary_item_image {
+                            width: 17%;
+                            height: 100%;
+                            box-shadow: 0px 5px 20px 0px rgba(240, 90, 0, 0.2);
+                            border-radius: 10px;
+                        }
+                    }
                 }
             }
 
@@ -63,6 +71,10 @@
                     font-size: 30px;
                     font-weight: 400;
                     line-height: 32px;
+
+                    @media (max-width:1024px) {
+                        font-size: 25px;
+                    }
                 }
 
                 .item_status {
@@ -151,6 +163,9 @@
                         }
 
                     }
+                    @media (max-width:1024px) {
+                        width: 50%;
+                    }
                 }
             }
         }
@@ -185,7 +200,7 @@
                     .item_description_box {
                         display: flex;
                         align-items: center;
-                        max-width: 250px;
+                        max-width: 300px;
 
                         .item_description_text {
                             font-family: Prosto One;
@@ -203,7 +218,13 @@
                         }
                     }
                 }
+                @media (max-width:1024px) {
+                    width: 70%;
+                }
             }
+        }
+        @media (max-width:1024px) {
+            width: 100%;
         }
     }
 }
