--- a/src/Components/CardInfo/cardInfo.scss
+++ b/src/Components/CardInfo/cardInfo.scss
@@ -2,6 +2,8 @@
     display: grid;
     place-items: center;
 
+
+
     .cardInfo-container {
         padding: 15px;
         width: 80%;
@@ -16,12 +18,24 @@
             display: flex;
             justify-content: space-between;
 
+            @media (max-width:480px) {
+                flex-direction: column;
+            }
+
             .cardInfo-content1 {
                 width: 45%;
                 display: flex;
                 flex-direction: column;
                 justify-content: space-between;
                 align-items: center;
+
+                @media (max-width:768px) {
+                    width: 55%;
+                }
+                @media (max-width:480px) {
+                    width: 100%;
+
+                }
 
                 .main_item_image {
                     width: 360px;
@@ -65,6 +79,14 @@
                 display: flex;
                 flex-direction: column;
                 justify-content: start;
+
+                @media (max-width:768px) {
+                    width: 40%;
+                }
+                @media (max-width:480px) {
+                    width: 100%;
+                }
+
 
                 .item_title {
                     font-family: Prosto One;
@@ -143,6 +165,10 @@
                         color: white;
                         text-transform: uppercase;
                         cursor: pointer;
+
+                        @media (max-width:480px) {
+                            width: 50%;
+                        }
                     }
 
                     .toBasket:hover {
@@ -166,6 +192,12 @@
                     @media (max-width:1024px) {
                         width: 50%;
                     }
+                    @media (max-width:768px) {
+                        width: 70%;
+                    }
+                    @media (max-width:480px) {
+                        width: 100%;
+                    }
                 }
             }
         }
@@ -176,6 +208,8 @@
             margin: 0 auto;
             display: flex;
             flex-direction: column;
+
+      
 
             .description-title {
                 padding-top: 15px;
@@ -191,6 +225,10 @@
                 width: 60%;
                 display: flex;
                 justify-content: space-between;
+
+                @media (max-width:480px) {
+                  flex-direction: column;
+                }
 
                 .description-content1,
                 .description-content2 {
@@ -220,6 +258,9 @@
                 }
                 @media (max-width:1024px) {
                     width: 70%;
+                }
+                @media (max-width:768px) {
+                    width: 80%;
                 }
             }
         }
