--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -31,7 +31,8 @@
                 line-height: 20px;
                 color: rgba(255, 255, 255, 1);
             }
-            .footerLink_box1:hover{
+
+            .footerLink_box1:hover {
                 color: orange;
                 text-decoration: underline;
             }
@@ -51,7 +52,8 @@
                 line-height: 20px;
                 color: rgba(255, 255, 255, 1);
             }
-            .footerLink_box2:hover{
+
+            .footerLink_box2:hover {
                 color: orange;
                 text-decoration: underline;
             }
@@ -90,4 +92,45 @@
             }
         }
     }
+}
+
+
+@media (max-width:480px) {
+    .footer {
+        height: auto;
+    }
+
+    .footer-container {
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+    }
+
+    .footer-box1,
+    .footer-box2,
+    .footer-box3 {
+        align-items: center;
+    }
+
+    .infoFooterText {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    .logoLink,
+    .social {
+        width: 100%;
+        height: 70px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+
+    .contentFooter {
+        text-align: center;
+        height: 70px;
+    }
+
 }
