--- a/src/Components/Navigation/navigation.scss
+++ b/src/Components/Navigation/navigation.scss
@@ -15,6 +15,12 @@
             align-items: center;
             justify-content: space-around;
 
+            @media (max-width:480px) {
+                flex-direction: column-reverse;
+                align-items: center;
+                width: 100%;
+            }
+
             .functBox {
                 display: flex;
                 width: 384px;
@@ -144,129 +150,184 @@
                     font-size: 10px;
                 }
             }
+
+            @media (max-width:480px) {
+                .functBox {
+                    width: 100%;
+                }
+
+                #saves,
+                #status,
+                #profile,
+                #cart {
+                    width: 25%;
+                }
+
+                .logo,
+                .timetable,
+                .productsPrice {
+                    display: none;
+                }
+
+                .callBox {
+                    width: 50%;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-between;
+                    align-items: center;
+                }
+
+            }
+
         }
     }
+}
 
-    .navigation-content2 {
-        background: #000;
-        height: 110px;
+.navigation-content2 {
+    background: #000;
+    height: 110px;
 
-        .navigation-content2-container {
-            width: 90%;
-            height: 100%;
-            margin: 0 auto;
+    .navigation-content2-container {
+        width: 90%;
+        height: 100%;
+        margin: 0 auto;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+
+        @media (max-width:480px) {
+            height: 100px;
+            width: 97%;
             display: flex;
+            justify-content: space-around;
             align-items: center;
+            padding-bottom: 25px;
+
+            .social {
+                display: none;
+            }
+
+            .search{
+                .searchInp{
+                    width: 100%;
+                }
+            }
+        }
+
+        .burger-menu button {
+            padding: 10px;
+            width: 200px;
+            height: 48px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            border: 1px solid #f05a00;
+            background: #000;
+            color: white;
+
+            font-family: Raleway;
+            font-size: 16px;
+            font-weight: 500;
+            line-height: 20px;
+        }
+
+        .burger-menu button:hover {
+            cursor: pointer;
+        }
+
+        .links {
+            width: 30%;
+            display: flex;
             justify-content: space-around;
 
-            .burger-menu button {
-                padding: 10px;
-                width: 200px;
-                height: 48px;
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-                border: 1px solid #f05a00;
-                background: #000;
-                color: white;
 
+            @media (max-width:480px) {
+                display: none;
+            }
+
+            .navMainLink {
                 font-family: Raleway;
                 font-size: 16px;
                 font-weight: 500;
                 line-height: 20px;
-            }
+                text-decoration: none;
+                color: white;
 
-            .burger-menu button:hover {
-                cursor: pointer;
-            }
-
-            .links {
-                width: 30%;
-                display: flex;
-                justify-content: space-around;
-
-                .navMainLink {
-                    font-family: Raleway;
-                    font-size: 16px;
-                    font-weight: 500;
-                    line-height: 20px;
-                    text-decoration: none;
-                    color: white;
-
-                    @media (max-width: 1024px) {
-                        font-size: 12px;
-                    }
-                    @media (max-width: 768px) {
-                        font-size: 10px;
-                    }
+                @media (max-width: 1024px) {
+                    font-size: 12px;
                 }
 
-                .navMainLink:hover {
-                    color: orange;
-                    text-decoration: underline;
+                @media (max-width: 768px) {
+                    font-size: 10px;
                 }
             }
 
-            .social {
-                .navLink {
-                    margin-left: 5px;
-                    margin-right: 5px;
-                }
+            .navMainLink:hover {
+                color: orange;
+                text-decoration: underline;
+            }
+        }
 
-                @media (max-width:768px) {
-                    .social_img{
-                        width: 25px;
-                        height: 25px;
-                    }
-                }
+        .social {
+            .navLink {
+                margin-left: 5px;
+                margin-right: 5px;
             }
 
-            .search {
-                padding-left: 15px;
-                padding-right: 15px;
-                height: 52px;
-                display: flex;
-                align-items: center;
-                background: white;
-                width: 35%;
-                border-radius: 15px;
-
-                .searchInp {
-                    margin-left: 20px;
-                    height: 80%;
-                    outline: none;
-                    border: none;
-                }
-
-                @media (max-width:768px) {
-                    .search {
-                        width: 35%;
-                    }
+            @media (max-width:768px) {
+                .social_img {
+                    width: 25px;
+                    height: 25px;
                 }
             }
         }
 
-        @media (max-width:768px) {
-            .link-box {
-                width: 60px;
+        .search {
+            padding-left: 15px;
+            padding-right: 15px;
+            height: 52px;
+            display: flex;
+            align-items: center;
+            background: white;
+            width: 35%;
+            border-radius: 15px;
 
-                .toCatalog_link {
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
+            .searchInp {
+                margin-left: 20px;
+                height: 80%;
+                outline: none;
+                border: none;
+            }
 
-                    .burger_link_img {
-                        width: 90%;
-                    }
+            @media (max-width:768px) {
+                .search {
+                    width: 35%;
+                }
+            }
+        }
+    }
 
-                    .toCatalog_link_text {
-                        display: none;
-                    }
+    @media (max-width:768px) {
+        .link-box {
+            width: 60px;
+
+            .toCatalog_link {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
+                .burger_link_img {
+                    width: 90%;
+                }
+
+                .toCatalog_link_text {
+                    display: none;
                 }
             }
         }
     }
 }
+
 
 .link-box {
     width: 200px;
