--- a/src/Pages/Cart/cart.scss
+++ b/src/Pages/Cart/cart.scss
@@ -18,6 +18,14 @@
     font-size: 20px;
     font-weight: 400;
     line-height: 24px;
+
+    @media (max-width: 480px) {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+
+    }
 }
 
 .contentTitle {
@@ -37,6 +45,10 @@
             justify-content: space-around;
         }
     }
+
+    @media (max-width: 480px) {
+        display: none;
+    }
 }
 
 .products_container {
@@ -45,6 +57,10 @@
     width: 100%;
     display: flex;
     flex-direction: column;
+
+    @media (max-width: 480px) {
+        padding-top: 0;
+    }
 }
 
 .contentTitleText {
@@ -52,6 +68,11 @@
     font-size: 16px;
     font-weight: 400;
     line-height: 20px;
+
+    @media (max-width:768px) {
+        font-size: 14px;
+        padding-right: 10px;
+    }
 }
 
 .cart_total_price {
@@ -116,8 +137,12 @@
             line-height: 24px;
             color: rgba(240, 90, 0, 1);
         }
+
         @media (max-width:1366px) {
             width: 50%;
+        }
+        @media (max-width:480px) {
+            width: 100%;
         }
     }
 }
@@ -160,5 +185,9 @@
 
     text-decoration: none;
     color: rgba(138, 138, 138, 1);
+
+    @media (max-width: 480px) {
+        margin-top: 25px;
+    }
 
 }
