--- a/src/Pages/Profile/profile.scss
+++ b/src/Pages/Profile/profile.scss
@@ -10,6 +10,12 @@
         font-size: 20px;
         font-weight: 300;
         line-height: 38px;
+
+        @media (max-width: 480px) {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
     }
 
     .profile-container {
@@ -19,6 +25,13 @@
         justify-content: space-between;
         width: 80%;
         margin: 0 auto;
+
+        @media (max-width: 480px) {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
 
         .profile_content1 {
             width: 30%;
