--- a/src/Pages/Saves/saves.scss
+++ b/src/Pages/Saves/saves.scss
@@ -6,7 +6,22 @@
         width: 80%;
         margin: 0 auto;
 
+
+        @media (max-width: 768px) {
+            width: 98%;
+        }
+
         .title-box {
+
+
+            @media (max-width: 480px) {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+            }
+
+
             .saves-title {
                 font-family: Prosto One;
                 font-size: 30px;
@@ -24,11 +39,18 @@
             }
         }
 
-        .items-container{
+        .items-container {
             width: 100%;
             display: flex;
             flex-wrap: wrap;
             gap: 50px;
+
+            @media (max-width: 480px) {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-direction: column;
+            }
         }
     }
 }
