--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -8,6 +8,7 @@
 
 .formModal {
   position: fixed;
+  z-index: 100;
   width: 100%;
   height: 100%;
   top: 0;
@@ -16,11 +17,17 @@
   display: grid;
   place-items: center;
 
+
+
   .formModal-container {
     width: 622px;
     height: 572px;
     background: white;
     padding: 30px;
+
+    @media (max-width:480px) {
+       width: 395px;
+    }
 
     .orderCallForm {
       display: flex;
